--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@
 
     <button class="button-landscape" onclick="landscapeClick()">Change&nbsp;the&nbsp;Landscape</button>
 
-    
+    <div class="name">
+
+        <h1>Project by André Araújo</h1>
+    </div>
 
 </body>
 
